--- a/styles/_partials/layout/_header.scss
+++ b/styles/_partials/layout/_header.scss
@@ -116,7 +116,7 @@
 
     .mobile-select-nav {
         display: block;
-        margin: 1rem;
+        margin: 1rem 1rem 0 1rem;
         padding: 0.5rem;
         width: calc(100% - 2rem);
     }
